# ag-webGL

./: .env.example  .gitignore  PLAN.md  README.md  SESSION_SNAPSHOT.md  pyproject.toml
.claude/: CLAUDE.md
agent/: graph.py  llm.py  main.py
agent/agents/: animation.py  asset.py  controls.py  director.py  layout.py  lighting.py  placement.py  types.py
agent/evals/: conftest.py  test_animation.py  test_controls.py  test_director.py  test_e2e_tomato.py  test_event_shapes.py  test_graph.py  test_layout.py  test_lighting.py  test_placement_anchors.py  test_scene_events.py  test_scene_store.py  test_store_tools.py  test_zone_placement.py
agent/evals/fixtures/: expected_events.py  prompts.py
agent/events/: scene_events.py  vocabulary.py
agent/prompts/: asset.md  director.md
agent/store/: scene_store.py  store_tools.py
docs/: agent-pipeline.md  event-vocabulary.md  scene-store.md  serialization-strategy.md  v2-backlog.md
frontend/: next.config.ts  package-lock.json  package.json  tsconfig.json  vitest.config.ts
frontend/app/: page.tsx
frontend/components/: ScenePage.tsx
frontend/hooks/: useSceneActions.test.ts  useSceneActions.ts  useSceneAgent.ts  useSceneReadable.test.ts  useSceneReadable.ts
frontend/lib/: debug.ts  sceneSetup.ts
frontend/serialization/: activeWindow.test.ts  activeWindow.ts  objectIndex.test.ts  objectIndex.ts  sceneSerializer.test.ts  sceneSerializer.ts  spatialSummary.test.ts  spatialSummary.ts
frontend/tests/: smoke.test.ts
scripts/: aws-ec2.sh  ec2-bootstrap.sh
shared/schema/: sceneSchema.py  sceneSchema.ts
(+18 files in other folders)
